--- a/Client/kanban-task-management/src/index.css
+++ b/Client/kanban-task-management/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Plus+Jakarta+Sans:wght@400&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
