--- a/Client/kanban-task-management/src/index.css
+++ b/Client/kanban-task-management/src/index.css
@@ -2,3 +2,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.dark {
+  @apply bg-[#20212C] text-[#FFF];
+}
+.light {
+  @apply bg-[#F4F7FD] text-[#000112];
+}
